--- a/MiniMarket/app/src/main/res/values/strings_arrays.xml
+++ b/MiniMarket/app/src/main/res/values/strings_arrays.xml
@@ -5,6 +5,7 @@
         <item>@string/profile</item>
         <item>@string/basket</item>
         <item>@string/myOrders</item>
+        <item>@string/disputs</item>
         <item>@string/myServices</item>
         <item>@string/myFavorites</item>
         <item>@string/notifications</item>
