--- a/MiniMarket/app/src/main/res/layout/assess_dialog.xml
+++ b/MiniMarket/app/src/main/res/layout/assess_dialog.xml
@@ -1,74 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/background_view">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <!--android:background="@drawable/background_view"-->
 
     <TextView
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/assessShop"
-        android:id="@+id/textView7"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
-        android:textStyle="bold"
-        android:textSize="18dp" />
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp"
+        android:text="@string/assessShop"
+        android:textSize="18dp"
+        android:textStyle="bold" />
 
     <RatingBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/assessDialog.ratingBarShop"
+        style="@style/Widget.AppCompat.RatingBar.Indicator"
+        android:layout_width="wrap_content"
 
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginTop="8dp"
-        android:numStars="5"
         android:isIndicator="false"
-        style="@style/Widget.AppCompat.RatingBar.Indicator" />
+        android:numStars="5"
+        android:stepSize="1" />
 
     <TextView
+        android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/assessCourier"
-        android:id="@+id/textView8"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
-        android:textStyle="bold"
-        android:textSize="18dp" />
+        android:text="@string/assessCourier"
+        android:textSize="18dp"
+        android:textStyle="bold" />
 
     <RatingBar
+        android:id="@+id/assessDialog.ratingBarCourier"
+        style="@style/Widget.AppCompat.RatingBar.Indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/assessDialog.ratingBarCourier"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
-        android:numStars="5"
         android:isIndicator="false"
-        style="@style/Widget.AppCompat.RatingBar.Indicator" />
+        android:numStars="5"
+        android:stepSize="1" />
 
     <EditText
+        android:id="@+id/assessDialog.edTxComment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/assessDialog.edTxComment"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp"
-        android:maxLines="3"
+        android:hint="@string/writeComment"
         android:imeOptions="actionDone"
-        android:hint="@string/writeComment"/>
+        android:maxLines="3"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp" />
+
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/assessDialog.btnAddPhoto"
+        android:layout_width="170dp"
         android:layout_height="36dp"
-        android:text="@string/assess"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button_background"
+        android:text="@string/AddPhoto"
+        android:textAllCaps="false" />
+
+    <Button
         android:id="@+id/assessDialog.btnAssess"
+        android:layout_width="170dp"
+        android:layout_height="36dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="8dp"
-        android:textAllCaps="false"
-        android:background="@drawable/button_background"/>
+        android:background="@drawable/button_background"
+        android:text="@string/assess"
+        android:textAllCaps="false" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/sendDisputeFragment.recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/sendDisputeFragment.btnAddphoto"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/sendDisputeFragment.edTx"
+        android:layout_marginTop="8dp"></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
