--- a/MiniMarket/app/src/main/res/layout/dialog_confrim.xml
+++ b/MiniMarket/app/src/main/res/layout/dialog_confrim.xml
@@ -6,18 +6,21 @@
 
 
     <Button
+        android:text="@string/taxi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/dispatcher"
-        android:id="@+id/dialogConfrim.btnDispatcher"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
+        android:id="@+id/dialogConfrim.btnTaxi"
+        android:layout_below="@+id/dialogConfrim.btnDispatcher"
+        android:layout_alignStart="@+id/dialogConfrim.btnDispatcher"
+        android:layout_alignEnd="@+id/dialogConfrim.btnCourier"
         android:background="@drawable/button_blue_background"
+        android:textColor="@color/white"
         android:textAllCaps="false"
-        android:textColor="@color/white"/>
+        android:layout_marginTop="8dp"
+        android:layout_alignLeft="@+id/dialogConfrim.btnDispatcher"
+        android:layout_alignRight="@+id/dialogConfrim.btnCourier" />
 
     <Button
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/courier"
         android:id="@+id/dialogConfrim.btnCourier"
@@ -29,18 +32,21 @@
         android:background="@drawable/button_blue_background"
         android:layout_marginLeft="8dp"
         android:textAllCaps="false"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:layout_width="120dp" />
     <com.balinasoft.mallione.Ui.CustomViews.CustomNumberPicker
-        android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="56dp"
-        android:layout_alignParentTop="true"
+        android:layout_marginTop="112dp"
         android:layout_alignRight="@+id/dialogConfrim.btnCourier"
         android:layout_alignEnd="@+id/dialogConfrim.btnCourier"
         android:layout_alignLeft="@+id/dialogConfrim.btnDispatcher"
 
         android:layout_alignStart="@+id/dialogConfrim.btnDispatcher"
-        android:id="@+id/dialogConfrim.numPicker"></com.balinasoft.mallione.Ui.CustomViews.CustomNumberPicker>
+        android:id="@+id/dialogConfrim.numPicker"
+        android:layout_width="150dp"
+        android:layout_alignParentTop="true"
+        android:layout_below="@+id/dialogConfrim.btnTaxi"
+        android:visibility="invisible"></com.balinasoft.mallione.Ui.CustomViews.CustomNumberPicker>
 
     <Button
         android:layout_width="wrap_content"
@@ -56,4 +62,49 @@
         android:textColor="@color/white"
         android:layout_marginTop="8dp"
         android:textAllCaps="false"/>
+
+    <Button
+        android:layout_height="wrap_content"
+        android:text="@string/dispatcher"
+        android:id="@+id/dialogConfrim.btnDispatcher"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@drawable/button_blue_background"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_width="120dp" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="31dp"
+        android:id="@+id/dialogConfrim.linTaxiTime"
+        android:layout_above="@+id/dialogConfrim.btnOk"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/dialogConfrim.btnCourier">
+
+        <TextView
+            android:text="@string/DeliveryTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView12"
+            android:textSize="18sp"
+            android:textAlignment="center"
+            android:layout_margin="8dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:id="@+id/dialogConfrim.tvDeliveryTime"
+            android:textSize="18sp"
+            android:textAlignment="gravity"
+            android:text="Задать время"
+            android:textAllCaps="false"
+            android:layout_height="50dp"
+            android:gravity="center_vertical|center" />
+    </LinearLayout>
 </RelativeLayout>
