--- a/MiniMarket/app/src/main/res/layout/dialog_edit_text_message.xml
+++ b/MiniMarket/app/src/main/res/layout/dialog_edit_text_message.xml
@@ -23,10 +23,10 @@
         android:maxLines="3"
 
         android:imeOptions="actionNext"
-        android:hint="@string/enterMessage" />
+        android:hint="@string/passRecovery" />
     <Button
         android:id="@+id/dialogEdTx.btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@drawable/button_blue_background"
