--- a/MiniMarket/app/src/main/res/layout/dialog_select_couriers.xml
+++ b/MiniMarket/app/src/main/res/layout/dialog_select_couriers.xml
@@ -19,8 +19,8 @@
 <Button
     android:id="@+id/dialogSelectCourier.btnOk"
     android:layout_marginTop="8dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
     android:layout_gravity="center_horizontal"
     android:textAllCaps="false"
     android:text="@string/ok"
