--- a/MiniMarket/app/src/main/res/layout/item_basket_fragment.xml
+++ b/MiniMarket/app/src/main/res/layout/item_basket_fragment.xml
@@ -10,15 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/activityBacketItem.recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/activityBacketItem.toolBar"
-            android:layout_above="@+id/activityBacketItem.btnOrder">
-
-        </android.support.v7.widget.RecyclerView>
-
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,18 +18,25 @@
             android:layout_centerHorizontal="true" />
 
         <Button
-            android:layout_margin="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:text="New Button"
             android:id="@+id/activityBacketItem.btnOrder"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:textColor="@color/white"
-            android:background="@drawable/button_blue_background"/>
+            android:background="@drawable/button_blue_background"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="23dp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/activityBacketItem.recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+        </android.support.v7.widget.RecyclerView>
 
     </RelativeLayout>
 </LinearLayout>
