--- a/MiniMarket/app/src/main/res/layout/item_notification.xml
+++ b/MiniMarket/app/src/main/res/layout/item_notification.xml
@@ -11,7 +11,8 @@
     card_view:cardElevation="8dp"
     card_view:cardBackgroundColor="@android:color/white"
 
-    android:layout_marginBottom="6dp">
+    android:layout_marginBottom="6dp"
+    android:longClickable="true">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
