--- a/MiniMarket/app/src/main/res/layout/nav_courier.xml
+++ b/MiniMarket/app/src/main/res/layout/nav_courier.xml
@@ -14,7 +14,11 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="6dp"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginLeft="18dp"
+        android:layout_marginBottom="40dp"
+        android:gravity="left"
+        android:textAllCaps="false"
+        android:text="@string/onlineOrOffline"
+        android:textSize="16sp" />
 
 </RelativeLayout>
