--- a/MiniMarket/app/src/main/res/layout/nav_header.xml
+++ b/MiniMarket/app/src/main/res/layout/nav_header.xml
@@ -37,8 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/navHeaderFragment.tvFio"
-            android:layout_marginTop="8dp"
-            android:text="" />
+            android:layout_marginTop="8dp" />
 
         <FrameLayout
             android:layout_width="wrap_content"
@@ -62,6 +61,16 @@
                 android:text="@string/login"
                 android:visibility="visible" />
         </FrameLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/tvStatus"
+            android:layout_below="@+id/navHeaderFragment.tvCity"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:visibility="visible" />
     </RelativeLayout>
 
 </FrameLayout>
