--- a/MiniMarket/app/src/main/res/layout/item_order.xml
+++ b/MiniMarket/app/src/main/res/layout/item_order.xml
@@ -6,13 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="12dp">
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        
+
         android:layout_height="wrap_content"
         card_view:cardBackgroundColor="@android:color/white"
         card_view:cardCornerRadius="2dp"
-        card_view:cardElevation="8dp">
+        card_view:cardElevation="8dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
