--- a/MiniMarket/app/src/main/res/layout/basket_fragment.xml
+++ b/MiniMarket/app/src/main/res/layout/basket_fragment.xml
@@ -14,5 +14,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/basketFragment.progressBar"
         android:layout_centerVertical="true"
+        android:visibility="gone"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
