--- a/MiniMarket/app/src/main/res/layout/item_item.xml
+++ b/MiniMarket/app/src/main/res/layout/item_item.xml
@@ -45,12 +45,12 @@
             <RatingBar
                 android:layout_margin="8dp"
                 android:id="@+id/itemFragment.ratingBar"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:numStars="5"
                 android:isIndicator="true"
-                style="@style/Widget.AppCompat.RatingBar.Small"/>
+                style="@style/Widget.AppCompat.RatingBar.Small"
+                android:layout_width="wrap_content" />
             <TextView
                 android:layout_marginTop="8dp"
                 android:text="kjuvhlkd"
